2006-08-21  Jason Clinton  <me@jasonclinton.com>

	* gnome-gnomines.png:
	* gnome-gnomines.svg:
	* Makefile.am: Added pixmap and SVG icons from Daniel Derozier <dcubed20@gmail.com>

2006-08-04  Andreas Røsdal  <andrearo@stud.ntnu.no>

	* minefield.c: Fix removal of prelight in top-left corner tile.
	Bug reported by Shaun McCance in Bug #349696. 


2006-07-14  Andreas Røsdal  <andrearo@stud.ntnu.no>

	* help/C/gnomine.xml:
	* gnomine.c: Add a Pause/Resume menu item. See Bug #346969.

2006-07-08  Andreas Røsdal  <andrearo@stud.ntnu.no>

        * Makefile.am:
        * gnomine.c:
        * gnomine.schemas.in:
        * minefield.c:
        * minefield.h:
        * warning.svg: 
        * help/C/gnomine.xml:
        * help/C/figures/preferences.png: Implement a warning when placing too many 
        markers around a mine. Patch by Zinx Verituse <zinx@users.sourceforge.net>
        in Bug #346404.

2006-04-11  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.c: Tweak the about info.

2006-04-06  Thomas Andersen  <phomes@gmail.com>

	* gnomine.c: Update About dialog

2006-04-03  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.desktop.in: 
	* Makefile.am: Update the icon handling to use icon themes.

2006-03-29  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.c (main): Patch from Thomas Andersen to upgrade popt to
	GOption.

2006-02-03  Callum McKenzie  <callum@spooky-possum.org>

	* Makefile.am: Remove the spurious dependence on gstreamer.

2006-01-25  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.c: (gpointer) cast -> GINT_TO_POINTER. This should fix
	bug #320713.

2006-01-22  Callum McKenzie  <callum@spooky-possum.org>

	* minefield.c (gtk_minefield_multi_release): Remove a spurious
	warning.

2006-01-17  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.c: Patch from Scott Bronson to ensure user-edited
	accelerators are saved (bug #327280).

2006-01-09  Callum McKenzie  <callum@spooky-possum.org>
