@@ -1,3 +1,10 @@
+2006-10-01  Jason Clinton  <me@jasonclinton.com>
+
+	* 16x16:
+	* 22x22:
+	* 32x32:
+	* Makefile.am: Added 16, 22, and 32 icons sizes per Novell request
+
 2006-08-21  Jason Clinton  <me@jasonclinton.com>
 
 	* gnome-gnomines.png:
